fix: prevent layout shifting after opening a modal

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@ html {
   @media print {
     background-color: #fff !important;
   }
+  scrollbar-gutter: stable;
 }
 
 body {
